crates/flow-rewrite/tests/snapshots/golden__calc_mermaid.snap
---
source: crates/flow-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn calc"]
        f0o0(("(i32, i32, i32)"))
        f0o1(("ret: i32"))
        f0o2(("op: i32"))
        f0o3(("a: i32"))
        f0o4(("b: i32"))
        f0o5(("0: i32"))
        f0o6(("(i32, i32)"))
        f0o7(("bool"))
        f0o8(("1: i32"))
        f0o9(("(i32, i32)"))
        f0o10(("bool"))
        f0o11(("2: i32"))
        f0o12(("(i32, i32)"))
        f0o13(("bool"))
        f0o14(("3: i32"))
        f0o15(("(i32, i32)"))
        f0o16(("bool"))
        f0o17(("(i32, i32)"))
        f0o18(("i32"))
        f0o19(("(i32, i32)"))
        f0o20(("i32"))
        f0o21(("(i32, i32)"))
        f0o22(("i32"))
        f0o23(("(i32, i32)"))
        f0o24(("i32"))
        f0o25(("(i32, i32)"))
        f0o26(("i32"))
        f0o27(("(i32, i32, bool)"))
        f0o28(("i32"))
        f0o29(("(i32, i32, bool)"))
        f0o30(("i32"))
        f0o31(("(i32, i32, bool)"))
        f0o32(("i32"))
        f0o33(("(i32, i32, bool)"))
        f0o0 -- "Proj 0" --> f0o2
        f0o0 -- "Proj 1" --> f0o3
        f0o0 -- "Proj 2" --> f0o4
        f0o2 -- "Pair 0/2" --> f0o6
        f0o5 -- "Pair 1/2" --> f0o6
        f0o6 -- "Eq" --> f0o7
        f0o2 -- "Pair 0/2" --> f0o9
        f0o8 -- "Pair 1/2" --> f0o9
        f0o9 -- "Eq" --> f0o10
        f0o2 -- "Pair 0/2" --> f0o12
        f0o11 -- "Pair 1/2" --> f0o12
        f0o12 -- "Eq" --> f0o13
        f0o2 -- "Pair 0/2" --> f0o15
        f0o14 -- "Pair 1/2" --> f0o15
        f0o15 -- "Eq" --> f0o16
        f0o3 -- "Pair 0/2" --> f0o17
        f0o4 -- "Pair 1/2" --> f0o17
        f0o17 -- "Add" --> f0o18
        f0o3 -- "Pair 0/2" --> f0o19
        f0o4 -- "Pair 1/2" --> f0o19
        f0o19 -- "Sub" --> f0o20
        f0o3 -- "Pair 0/2" --> f0o21
        f0o4 -- "Pair 1/2" --> f0o21
        f0o21 -- "Mul" --> f0o22
        f0o3 -- "Pair 0/2" --> f0o23
        f0o4 -- "Pair 1/2" --> f0o23
        f0o23 -- "Div" --> f0o24
        f0o3 -- "Pair 0/2" --> f0o25
        f0o4 -- "Pair 1/2" --> f0o25
        f0o25 -- "Mod" --> f0o26
        f0o24 -- "Pair 0/3" --> f0o27
        f0o26 -- "Pair 1/3" --> f0o27
        f0o16 -- "Pair 2/3" --> f0o27
        f0o27 -- "Phi" --> f0o28
        f0o22 -- "Pair 0/3" --> f0o29
        f0o28 -- "Pair 1/3" --> f0o29
        f0o13 -- "Pair 2/3" --> f0o29
        f0o29 -- "Phi" --> f0o30
        f0o20 -- "Pair 0/3" --> f0o31
        f0o30 -- "Pair 1/3" --> f0o31
        f0o10 -- "Pair 2/3" --> f0o31
        f0o31 -- "Phi" --> f0o32
        f0o18 -- "Pair 0/3" --> f0o33
        f0o32 -- "Pair 1/3" --> f0o33
        f0o7 -- "Pair 2/3" --> f0o33
        f0o33 -- "Phi" --> f0o1
    end
    subgraph f1["fn main"]
        f1o0(("io"))
        f1o1(("ret: io"))
        f1o2(("0: i32"))
        f1o3(("20: i32"))
        f1o4(("6: i32"))
        f1o5(("(i32, i32, i32)"))
        f1o6(("r_add: i32"))
        f1o7(("#quot;20 + 6 = #quot;: str"))
        f1o8(("(io, str)"))
        f1o9(("io"))
        f1o10(("(io, i32)"))
        f1o11(("io"))
        f1o12(("1: i32"))
        f1o13(("20: i32"))
        f1o14(("6: i32"))
        f1o15(("(i32, i32, i32)"))
        f1o16(("r_sub: i32"))
        f1o17(("#quot;20 - 6 = #quot;: str"))
        f1o18(("(io, str)"))
        f1o19(("io"))
        f1o20(("(io, i32)"))
        f1o21(("io"))
        f1o22(("2: i32"))
        f1o23(("20: i32"))
        f1o24(("6: i32"))
        f1o25(("(i32, i32, i32)"))
        f1o26(("r_mul: i32"))
        f1o27(("#quot;20 * 6 = #quot;: str"))
        f1o28(("(io, str)"))
        f1o29(("io"))
        f1o30(("(io, i32)"))
        f1o31(("io"))
        f1o32(("3: i32"))
        f1o33(("20: i32"))
        f1o34(("6: i32"))
        f1o35(("(i32, i32, i32)"))
        f1o36(("r_div: i32"))
        f1o37(("#quot;20 / 6 = #quot;: str"))
        f1o38(("(io, str)"))
        f1o39(("io"))
        f1o40(("(io, i32)"))
        f1o41(("io"))
        f1o42(("4: i32"))
        f1o43(("20: i32"))
        f1o44(("6: i32"))
        f1o45(("(i32, i32, i32)"))
        f1o46(("r_mod: i32"))
        f1o47(("#quot;20 % 6 = #quot;: str"))
        f1o48(("(io, str)"))
        f1o49(("io"))
        f1o50(("(io, i32)"))
        f1o51(("io"))
        f1o2 -- "Pair 0/3" --> f1o5
        f1o3 -- "Pair 1/3" --> f1o5
        f1o4 -- "Pair 2/3" --> f1o5
        f1o5 -- "Call" --> f1o6
        f1o0 -- "Pair 0/2" --> f1o8
        f1o7 -- "Pair 1/2" --> f1o8
        f1o8 -- "Print" --> f1o9
        f1o9 -- "Pair 0/2" --> f1o10
        f1o6 -- "Pair 1/2" --> f1o10
        f1o10 -- "Println" --> f1o11
        f1o12 -- "Pair 0/3" --> f1o15
        f1o13 -- "Pair 1/3" --> f1o15
        f1o14 -- "Pair 2/3" --> f1o15
        f1o15 -- "Call" --> f1o16
        f1o11 -- "Pair 0/2" --> f1o18
        f1o17 -- "Pair 1/2" --> f1o18
        f1o18 -- "Print" --> f1o19
        f1o19 -- "Pair 0/2" --> f1o20
        f1o16 -- "Pair 1/2" --> f1o20
        f1o20 -- "Println" --> f1o21
        f1o22 -- "Pair 0/3" --> f1o25
        f1o23 -- "Pair 1/3" --> f1o25
        f1o24 -- "Pair 2/3" --> f1o25
        f1o25 -- "Call" --> f1o26
        f1o21 -- "Pair 0/2" --> f1o28
        f1o27 -- "Pair 1/2" --> f1o28
        f1o28 -- "Print" --> f1o29
        f1o29 -- "Pair 0/2" --> f1o30
        f1o26 -- "Pair 1/2" --> f1o30
        f1o30 -- "Println" --> f1o31
        f1o32 -- "Pair 0/3" --> f1o35
        f1o33 -- "Pair 1/3" --> f1o35
        f1o34 -- "Pair 2/3" --> f1o35
        f1o35 -- "Call" --> f1o36
        f1o31 -- "Pair 0/2" --> f1o38
        f1o37 -- "Pair 1/2" --> f1o38
        f1o38 -- "Print" --> f1o39
        f1o39 -- "Pair 0/2" --> f1o40
        f1o36 -- "Pair 1/2" --> f1o40
        f1o40 -- "Println" --> f1o41
        f1o42 -- "Pair 0/3" --> f1o45
        f1o43 -- "Pair 1/3" --> f1o45
        f1o44 -- "Pair 2/3" --> f1o45
        f1o45 -- "Call" --> f1o46
        f1o41 -- "Pair 0/2" --> f1o48
        f1o47 -- "Pair 1/2" --> f1o48
        f1o48 -- "Print" --> f1o49
        f1o49 -- "Pair 0/2" --> f1o50
        f1o46 -- "Pair 1/2" --> f1o50
        f1o50 -- "Println" --> f1o51
        f1o51 -- "Output" --> f1o1
    end
