crates/flow-rewrite/tests/snapshots/golden__fir_mermaid.snap
---
source: crates/flow-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("1.0: f32"))
        f0o3(("2.0: f32"))
        f0o4(("3.0: f32"))
        f0o5(("4.0: f32"))
        f0o6(("5.0: f32"))
        f0o7(("6.0: f32"))
        f0o8(("7.0: f32"))
        f0o9(("8.0: f32"))
        f0o10(("0.5: f32"))
        f0o11(("0.25: f32"))
        f0o12(("0.125: f32"))
        f0o13(("0.0625: f32"))
        f0o14(("0: i32"))
        f0o15(("0.0: f32"))
        f0o16(("4: i32"))
        f0o17(("4: i32"))
        f0o18(("1: i32"))
        f0o19(("4: i32"))
        f0o20(("signal: [f32; 8]"))
        f0o21(("coeffs: [f32; 4]"))
        f0o22(("[i32; 4]"))
        f0o23(("([f32; 8], [f32; 4], f32, [i32; 4])"))
        f0o24(("sample: f32"))
        f0o25(("(io, f32)"))
        f0o26(("io"))
        f0o2 -- "Pair 0/8" --> f0o20
        f0o3 -- "Pair 1/8" --> f0o20
        f0o4 -- "Pair 2/8" --> f0o20
        f0o5 -- "Pair 3/8" --> f0o20
        f0o6 -- "Pair 4/8" --> f0o20
        f0o7 -- "Pair 5/8" --> f0o20
        f0o8 -- "Pair 6/8" --> f0o20
        f0o9 -- "Pair 7/8" --> f0o20
        f0o10 -- "Pair 0/4" --> f0o21
        f0o11 -- "Pair 1/4" --> f0o21
        f0o12 -- "Pair 2/4" --> f0o21
        f0o13 -- "Pair 3/4" --> f0o21
        f0o19 -- "Iota" --> f0o22
        f0o20 -- "Pair 0/4" --> f0o23
        f0o21 -- "Pair 1/4" --> f0o23
        f0o15 -- "Pair 2/4" --> f0o23
        f0o22 -- "Pair 3/4" --> f0o23
        f0o23 -- "Fold (+2 caps)" --> f0o24
        f0o0 -- "Pair 0/2" --> f0o25
        f0o24 -- "Pair 1/2" --> f0o25
        f0o25 -- "Println" --> f0o26
        f0o26 -- "Output" --> f0o1
    end
    subgraph f1["fn lift_fold$0"]
        f1o0(("([f32; 8], [f32; 4], f32, i32)"))
        f1o1(("ret: f32"))
        f1o2(("4: i32"))
        f1o3(("[f32; 8]"))
        f1o4(("[f32; 4]"))
        f1o5(("f32"))
        f1o6(("i32"))
        f1o7(("([f32; 4], i32)"))
        f1o8(("f32"))
        f1o9(("(i32, i32)"))
        f1o10(("i32"))
        f1o11(("([f32; 8], i32)"))
        f1o12(("f32"))
        f1o13(("(f32, f32)"))
        f1o14(("f32"))
        f1o15(("(f32, f32)"))
        f1o0 -- "Proj 0" --> f1o3
        f1o0 -- "Proj 1" --> f1o4
        f1o0 -- "Proj 2" --> f1o5
        f1o0 -- "Proj 3" --> f1o6
        f1o4 -- "Pair 0/2" --> f1o7
        f1o6 -- "Pair 1/2" --> f1o7
        f1o7 -- "Index" --> f1o8
        f1o2 -- "Pair 0/2" --> f1o9
        f1o6 -- "Pair 1/2" --> f1o9
        f1o9 -- "Add" --> f1o10
        f1o3 -- "Pair 0/2" --> f1o11
        f1o10 -- "Pair 1/2" --> f1o11
        f1o11 -- "Index" --> f1o12
        f1o8 -- "Pair 0/2" --> f1o13
        f1o12 -- "Pair 1/2" --> f1o13
        f1o13 -- "Mul" --> f1o14
        f1o5 -- "Pair 0/2" --> f1o15
        f1o14 -- "Pair 1/2" --> f1o15
        f1o15 -- "Add" --> f1o1
    end
