crates/flow-rewrite/tests/snapshots/golden__fir_report.snap
---
source: crates/flow-rewrite/tests/golden.rs
expression: "format!(\"{:#?}\", res.report)"
---
RewriteReport {
    rounds: 1,
    applied: [],
    skipped_non_canonical: false,
}
