crates/flow-rewrite/tests/snapshots/golden__sepia_mermaid.snap
---
source: crates/flow-rewrite/tests/golden.rs
expression: res.ir.to_mermaid()
---
flowchart LR
    subgraph f0["fn clamp"]
        f0o0(("(f32, f32, f32)"))
        f0o1(("ret: f32"))
        f0o2(("v: f32"))
        f0o3(("lo: f32"))
        f0o4(("hi: f32"))
        f0o5(("(f32, f32)"))
        f0o6(("bool"))
        f0o7(("(f32, f32)"))
        f0o8(("bool"))
        f0o9(("(f32, f32, bool)"))
        f0o10(("bounded: f32"))
        f0o11(("(f32, f32, bool)"))
        f0o0 -- "Proj 0" --> f0o2
        f0o0 -- "Proj 1" --> f0o3
        f0o0 -- "Proj 2" --> f0o4
        f0o2 -- "Pair 0/2" --> f0o5
        f0o3 -- "Pair 1/2" --> f0o5
        f0o5 -- "Lt" --> f0o6
        f0o2 -- "Pair 0/2" --> f0o7
        f0o4 -- "Pair 1/2" --> f0o7
        f0o7 -- "Gt" --> f0o8
        f0o3 -- "Pair 0/3" --> f0o9
        f0o2 -- "Pair 1/3" --> f0o9
        f0o6 -- "Pair 2/3" --> f0o9
        f0o9 -- "Phi" --> f0o10
        f0o4 -- "Pair 0/3" --> f0o11
        f0o10 -- "Pair 1/3" --> f0o11
        f0o8 -- "Pair 2/3" --> f0o11
        f0o11 -- "Phi" --> f0o1
    end
    subgraph f1["fn main"]
        f1o0(("io"))
        f1o1(("ret: io"))
        f1o2(("200.0: f32"))
        f1o3(("200.0: f32"))
        f1o4(("200.0: f32"))
        f1o5(("200.0: f32"))
        f1o6(("200.0: f32"))
        f1o7(("200.0: f32"))
        f1o8(("200.0: f32"))
        f1o9(("200.0: f32"))
        f1o10(("200.0: f32"))
        f1o11(("200.0: f32"))
        f1o12(("200.0: f32"))
        f1o13(("200.0: f32"))
        f1o14(("200.0: f32"))
        f1o15(("200.0: f32"))
        f1o16(("200.0: f32"))
        f1o17(("200.0: f32"))
        f1o18(("200.0: f32"))
        f1o19(("200.0: f32"))
        f1o20(("200.0: f32"))
        f1o21(("200.0: f32"))
        f1o22(("200.0: f32"))
        f1o23(("200.0: f32"))
        f1o24(("200.0: f32"))
        f1o25(("200.0: f32"))
        f1o26(("200.0: f32"))
        f1o27(("200.0: f32"))
        f1o28(("200.0: f32"))
        f1o29(("200.0: f32"))
        f1o30(("200.0: f32"))
        f1o31(("200.0: f32"))
        f1o32(("200.0: f32"))
        f1o33(("200.0: f32"))
        f1o34(("200.0: f32"))
        f1o35(("200.0: f32"))
        f1o36(("200.0: f32"))
        f1o37(("200.0: f32"))
        f1o38(("200.0: f32"))
        f1o39(("200.0: f32"))
        f1o40(("200.0: f32"))
        f1o41(("200.0: f32"))
        f1o42(("200.0: f32"))
        f1o43(("200.0: f32"))
        f1o44(("200.0: f32"))
        f1o45(("200.0: f32"))
        f1o46(("200.0: f32"))
        f1o47(("200.0: f32"))
        f1o48(("200.0: f32"))
        f1o49(("200.0: f32"))
        f1o50(("0.0: f32"))
        f1o51(("Pixel"))
        f1o52(("Pixel"))
        f1o53(("Pixel"))
        f1o54(("Pixel"))
        f1o55(("Pixel"))
        f1o56(("Pixel"))
        f1o57(("Pixel"))
        f1o58(("Pixel"))
        f1o59(("Pixel"))
        f1o60(("Pixel"))
        f1o61(("Pixel"))
        f1o62(("Pixel"))
        f1o63(("Pixel"))
        f1o64(("Pixel"))
        f1o65(("Pixel"))
        f1o66(("Pixel"))
        f1o67(("image: [Pixel; 16]"))
        f1o68(("sepia_image: [Pixel; 16]"))
        f1o69(("(f32, [Pixel; 16])"))
        f1o70(("total_r: f32"))
        f1o71(("(io, f32)"))
        f1o72(("io"))
        f1o2 -- "Pair 0/3" --> f1o51
        f1o3 -- "Pair 1/3" --> f1o51
        f1o4 -- "Pair 2/3" --> f1o51
        f1o5 -- "Pair 0/3" --> f1o52
        f1o6 -- "Pair 1/3" --> f1o52
        f1o7 -- "Pair 2/3" --> f1o52
        f1o8 -- "Pair 0/3" --> f1o53
        f1o9 -- "Pair 1/3" --> f1o53
        f1o10 -- "Pair 2/3" --> f1o53
        f1o11 -- "Pair 0/3" --> f1o54
        f1o12 -- "Pair 1/3" --> f1o54
        f1o13 -- "Pair 2/3" --> f1o54
        f1o14 -- "Pair 0/3" --> f1o55
        f1o15 -- "Pair 1/3" --> f1o55
        f1o16 -- "Pair 2/3" --> f1o55
        f1o17 -- "Pair 0/3" --> f1o56
        f1o18 -- "Pair 1/3" --> f1o56
        f1o19 -- "Pair 2/3" --> f1o56
        f1o20 -- "Pair 0/3" --> f1o57
        f1o21 -- "Pair 1/3" --> f1o57
        f1o22 -- "Pair 2/3" --> f1o57
        f1o23 -- "Pair 0/3" --> f1o58
        f1o24 -- "Pair 1/3" --> f1o58
        f1o25 -- "Pair 2/3" --> f1o58
        f1o26 -- "Pair 0/3" --> f1o59
        f1o27 -- "Pair 1/3" --> f1o59
        f1o28 -- "Pair 2/3" --> f1o59
        f1o29 -- "Pair 0/3" --> f1o60
        f1o30 -- "Pair 1/3" --> f1o60
        f1o31 -- "Pair 2/3" --> f1o60
        f1o32 -- "Pair 0/3" --> f1o61
        f1o33 -- "Pair 1/3" --> f1o61
        f1o34 -- "Pair 2/3" --> f1o61
        f1o35 -- "Pair 0/3" --> f1o62
        f1o36 -- "Pair 1/3" --> f1o62
        f1o37 -- "Pair 2/3" --> f1o62
        f1o38 -- "Pair 0/3" --> f1o63
        f1o39 -- "Pair 1/3" --> f1o63
        f1o40 -- "Pair 2/3" --> f1o63
        f1o41 -- "Pair 0/3" --> f1o64
        f1o42 -- "Pair 1/3" --> f1o64
        f1o43 -- "Pair 2/3" --> f1o64
        f1o44 -- "Pair 0/3" --> f1o65
        f1o45 -- "Pair 1/3" --> f1o65
        f1o46 -- "Pair 2/3" --> f1o65
        f1o47 -- "Pair 0/3" --> f1o66
        f1o48 -- "Pair 1/3" --> f1o66
        f1o49 -- "Pair 2/3" --> f1o66
        f1o51 -- "Pair 0/16" --> f1o67
        f1o52 -- "Pair 1/16" --> f1o67
        f1o53 -- "Pair 2/16" --> f1o67
        f1o54 -- "Pair 3/16" --> f1o67
        f1o55 -- "Pair 4/16" --> f1o67
        f1o56 -- "Pair 5/16" --> f1o67
        f1o57 -- "Pair 6/16" --> f1o67
        f1o58 -- "Pair 7/16" --> f1o67
        f1o59 -- "Pair 8/16" --> f1o67
        f1o60 -- "Pair 9/16" --> f1o67
        f1o61 -- "Pair 10/16" --> f1o67
        f1o62 -- "Pair 11/16" --> f1o67
        f1o63 -- "Pair 12/16" --> f1o67
        f1o64 -- "Pair 13/16" --> f1o67
        f1o65 -- "Pair 14/16" --> f1o67
        f1o66 -- "Pair 15/16" --> f1o67
        f1o67 -- "Map" --> f1o68
        f1o50 -- "Pair 0/2" --> f1o69
        f1o68 -- "Pair 1/2" --> f1o69
        f1o69 -- "Fold" --> f1o70
        f1o0 -- "Pair 0/2" --> f1o71
        f1o70 -- "Pair 1/2" --> f1o71
        f1o71 -- "Println" --> f1o72
        f1o72 -- "Output" --> f1o1
    end
    subgraph f2["fn main::map@0"]
        f2o0(("Pixel"))
        f2o1(("ret: Pixel"))
        f2o2(("0.393: f32"))
        f2o3(("0.769: f32"))
        f2o4(("0.189: f32"))
        f2o5(("0.0: f32"))
        f2o6(("255.0: f32"))
        f2o7(("0.349: f32"))
        f2o8(("0.686: f32"))
        f2o9(("0.168: f32"))
        f2o10(("0.0: f32"))
        f2o11(("255.0: f32"))
        f2o12(("0.272: f32"))
        f2o13(("0.534: f32"))
        f2o14(("0.131: f32"))
        f2o15(("0.0: f32"))
        f2o16(("255.0: f32"))
        f2o17(("f32"))
        f2o18(("f32"))
        f2o19(("f32"))
        f2o20(("(f32, f32)"))
        f2o21(("f32"))
        f2o22(("(f32, f32)"))
        f2o23(("f32"))
        f2o24(("(f32, f32)"))
        f2o25(("f32"))
        f2o26(("(f32, f32)"))
        f2o27(("f32"))
        f2o28(("(f32, f32)"))
        f2o29(("f32"))
        f2o30(("(f32, f32)"))
        f2o31(("f32"))
        f2o32(("(f32, f32)"))
        f2o33(("f32"))
        f2o34(("(f32, f32)"))
        f2o35(("f32"))
        f2o36(("(f32, f32)"))
        f2o37(("f32"))
        f2o38(("(f32, f32)"))
        f2o39(("f32"))
        f2o40(("(f32, f32)"))
        f2o41(("f32"))
        f2o42(("(f32, f32)"))
        f2o43(("f32"))
        f2o44(("(f32, f32)"))
        f2o45(("f32"))
        f2o46(("(f32, f32)"))
        f2o47(("f32"))
        f2o48(("(f32, f32)"))
        f2o49(("f32"))
        f2o50(("(f32, f32, f32)"))
        f2o51(("(f32, f32, f32)"))
        f2o52(("(f32, f32, f32)"))
        f2o53(("nr: f32"))
        f2o54(("ng: f32"))
        f2o55(("nb: f32"))
        f2o0 -- "Proj 0" --> f2o17
        f2o0 -- "Proj 1" --> f2o18
        f2o0 -- "Proj 2" --> f2o19
        f2o17 -- "Pair 0/2" --> f2o20
        f2o2 -- "Pair 1/2" --> f2o20
        f2o20 -- "Mul" --> f2o21
        f2o18 -- "Pair 0/2" --> f2o22
        f2o3 -- "Pair 1/2" --> f2o22
        f2o22 -- "Mul" --> f2o23
        f2o19 -- "Pair 0/2" --> f2o24
        f2o4 -- "Pair 1/2" --> f2o24
        f2o24 -- "Mul" --> f2o25
        f2o17 -- "Pair 0/2" --> f2o26
        f2o7 -- "Pair 1/2" --> f2o26
        f2o26 -- "Mul" --> f2o27
        f2o18 -- "Pair 0/2" --> f2o28
        f2o8 -- "Pair 1/2" --> f2o28
        f2o28 -- "Mul" --> f2o29
        f2o19 -- "Pair 0/2" --> f2o30
        f2o9 -- "Pair 1/2" --> f2o30
        f2o30 -- "Mul" --> f2o31
        f2o17 -- "Pair 0/2" --> f2o32
        f2o12 -- "Pair 1/2" --> f2o32
        f2o32 -- "Mul" --> f2o33
        f2o18 -- "Pair 0/2" --> f2o34
        f2o13 -- "Pair 1/2" --> f2o34
        f2o34 -- "Mul" --> f2o35
        f2o19 -- "Pair 0/2" --> f2o36
        f2o14 -- "Pair 1/2" --> f2o36
        f2o36 -- "Mul" --> f2o37
        f2o21 -- "Pair 0/2" --> f2o38
        f2o23 -- "Pair 1/2" --> f2o38
        f2o38 -- "Add" --> f2o39
        f2o27 -- "Pair 0/2" --> f2o40
        f2o29 -- "Pair 1/2" --> f2o40
        f2o40 -- "Add" --> f2o41
        f2o33 -- "Pair 0/2" --> f2o42
        f2o35 -- "Pair 1/2" --> f2o42
        f2o42 -- "Add" --> f2o43
        f2o39 -- "Pair 0/2" --> f2o44
        f2o25 -- "Pair 1/2" --> f2o44
        f2o44 -- "Add" --> f2o45
        f2o41 -- "Pair 0/2" --> f2o46
        f2o31 -- "Pair 1/2" --> f2o46
        f2o46 -- "Add" --> f2o47
        f2o43 -- "Pair 0/2" --> f2o48
        f2o37 -- "Pair 1/2" --> f2o48
        f2o48 -- "Add" --> f2o49
        f2o45 -- "Pair 0/3" --> f2o50
        f2o5 -- "Pair 1/3" --> f2o50
        f2o6 -- "Pair 2/3" --> f2o50
        f2o47 -- "Pair 0/3" --> f2o51
        f2o10 -- "Pair 1/3" --> f2o51
        f2o11 -- "Pair 2/3" --> f2o51
        f2o49 -- "Pair 0/3" --> f2o52
        f2o15 -- "Pair 1/3" --> f2o52
        f2o16 -- "Pair 2/3" --> f2o52
        f2o50 -- "Call" --> f2o53
        f2o51 -- "Call" --> f2o54
        f2o52 -- "Call" --> f2o55
        f2o53 -- "Pair 0/3" --> f2o1
        f2o54 -- "Pair 1/3" --> f2o1
        f2o55 -- "Pair 2/3" --> f2o1
    end
    subgraph f3["fn main::fold@1"]
        f3o0(("(f32, Pixel)"))
        f3o1(("ret: f32"))
        f3o2(("f32"))
        f3o3(("Pixel"))
        f3o4(("f32"))
        f3o5(("(f32, f32)"))
        f3o0 -- "Proj 0" --> f3o2
        f3o0 -- "Proj 1" --> f3o3
        f3o3 -- "Proj 0" --> f3o4
        f3o2 -- "Pair 0/2" --> f3o5
        f3o4 -- "Pair 1/2" --> f3o5
        f3o5 -- "Add" --> f3o1
    end
